--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: node_js
 node_js:
   - "8"
-  - "6"
+script:
+  - npm test
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    npm build
+    fi
