--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ script:
   - npm test
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    npm build;
+    npm run-script build;
     fi
