--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "clipboard": "1.7.1",
     "cross-fetch": "^1.1.1",
     "lodash": "^4.17.5",
+    "jqeury": "^3.3.1",
     "ngl": "2.0.0-dev.22",
     "nprogress": "^0.2.0",
-    "preact": "^8.2.7",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-draggable": "^3.0.5",
     "react-inlinesvg": "^0.7.5",
+    "react-redux": "^5.0.7",
     "react-svg-inline": "^2.1.0"
   },
   "devDependencies": {
@@ -44,8 +47,6 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "install": "^0.10.4",
     "jest": "^22.4.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "webpack": "^4.0.1",
     "webpack-bundle-tracker": "^0.2.1",
     "webpack-cli": "^2.0.9"
