--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clipboard": "1.7.1",
     "cross-fetch": "^1.1.1",
     "lodash": "^4.17.5",
-    "jqeury": "^3.3.1",
+    "jquery": "^3.3.1",
     "ngl": "2.0.0-dev.22",
     "nprogress": "^0.2.0",
     "react": "^16.2.0",
@@ -35,7 +35,8 @@
     "react-draggable": "^3.0.5",
     "react-inlinesvg": "^0.7.5",
     "react-redux": "^5.0.7",
-    "react-svg-inline": "^2.1.0"
+    "react-svg-inline": "^2.1.0",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
