--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
     "axios": "^0.17.1",
     "clipboard": "1.7.1",
     "cross-fetch": "^1.1.1",
-    "lodash": "^4.17.5",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "ngl": "2.0.0-dev.22",
     "nprogress": "^0.2.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.2.0",
     "react-draggable": "^3.0.5",
     "react-inlinesvg": "^0.7.5",
     "react-redux": "^5.0.7",
     "react-svg-inline": "^2.1.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
