--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@shopify/draggable": "1.0.0-beta.3",
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
     "clipboard": "1.7.1",
     "cross-fetch": "^1.1.1",
     "jquery": "^3.3.1",
@@ -37,6 +38,7 @@
     "react-redux": "^5.0.7",
     "react-svg-inline": "^2.1.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
