--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@shopify/draggable": "1.0.0-beta.3",
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.0.0",
     "clipboard": "1.7.1",
     "cross-fetch": "^1.1.1",
     "jquery": "^3.3.1",
