--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0",
     "clipboard": "1.7.1",
     "cross-fetch": "^1.1.1",
+    "css-loader": "^0.28.10",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "ngl": "2.0.0-dev.22",
@@ -40,7 +41,8 @@
     "react-svg-inline": "^2.1.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "style-loader": "^0.20.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
