--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "nprogress": "^0.2.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-table-next": "^0.1.4",
+    "react-bootstrap-table2-editor": "^0.1.2",
+    "react-bootstrap-table2-filter": "^0.1.3",
+    "react-bootstrap-table2-overlay": "^0.1.1",
+    "react-bootstrap-table2-paginator": "^0.1.1",
     "react-dom": "^16.2.0",
     "react-draggable": "^3.0.5",
     "react-inlinesvg": "^0.7.5",
