--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "css-loader": "^0.28.10",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
-    "ngl": "2.0.0-dev.22",
+    "ngl": "2.0.0-dev.28",
     "nprogress": "^0.2.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
@@ -39,12 +39,16 @@
     "react-bootstrap-table2-filter": "^0.1.3",
     "react-bootstrap-table2-overlay": "^0.1.1",
     "react-bootstrap-table2-paginator": "^0.1.1",
+    "react-burger-menu": "^2.3.0",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
     "react-draggable": "^3.0.5",
     "react-inlinesvg": "^0.7.5",
     "react-redux": "^5.0.7",
+    "react-redux-loading-bar": "^3.1.2",
     "react-svg-inline": "^2.1.0",
     "redux": "^3.7.2",
+    "redux-burger-menu": "^0.2.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.20.2"
@@ -59,8 +63,8 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "install": "^0.10.4",
     "jest": "^22.4.2",
-    "webpack": "^4.0.1",
+    "webpack": "^4.0.0-beta.3",
     "webpack-bundle-tracker": "^0.2.1",
-    "webpack-cli": "^2.0.9"
+    "webpack-cli": "^2.0.12"
   }
 }
