--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-bootstrap-table2-filter": "^0.1.3",
     "react-bootstrap-table2-overlay": "^0.1.1",
     "react-bootstrap-table2-paginator": "^0.1.1",
+    "react-bootstrap-toggle": "^2.2.6",
     "react-burger-menu": "^2.3.0",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
