--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^5.0.7",
     "react-redux-loading-bar": "^3.1.2",
     "react-svg-inline": "^2.1.0",
+    "react-typeahead": "^2.0.0-alpha.8",
     "redux": "^3.7.2",
     "redux-burger-menu": "^0.2.4",
     "redux-logger": "^3.0.6",
