--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "install": "^0.10.4",
     "jest": "^22.4.2",
-    "webpack": "^4.0.0-beta.3",
+    "webpack": "^4.0.0-alpha.0",
     "webpack-bundle-tracker": "^0.2.1",
     "webpack-cli": "^2.0.12"
   }
