--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "fixmyjs": "^2.0.0",
     "install": "^0.10.4",
     "jest": "^22.4.2",
+    "jshint": "^2.9.5",
     "webpack": "^4.8.3",
     "webpack-bundle-tracker": "^0.2.1",
     "webpack-cli": "^2.0.12"
