--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "fragalysis-frontend",
-  "version": "1.0.0",
+  "version": "0.0.1-alpha",
   "description": "Frontend for fragalysis",
   "main": "webpack.config.js",
   "scripts": {
     "test": "jest",
-    "test:watch": "npm test -- --watch",
     "build": "webpack --config webpack.config.js --progress --colors --mode production",
     "watch": "webpack --config webpack.config.js --watch",
     "dev": "webpack --config webpack.config.js --mode development --watch"
@@ -62,6 +61,7 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "compression-webpack-plugin": "^1.1.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "fixmyjs": "^2.0.0",
