--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "clipboard": "1.7.1",
+    "connected-react-router": "^4.3.0",
     "cross-fetch": "^1.1.1",
     "css-loader": "^0.28.10",
     "jquery": "^3.3.1",
@@ -47,6 +48,7 @@
     "react-inlinesvg": "^0.7.5",
     "react-redux": "^5.0.7",
     "react-redux-loading-bar": "^3.1.2",
+    "react-router-dom": "^4.3.1",
     "react-svg-inline": "^2.1.0",
     "react-typeahead": "^2.0.0-alpha.8",
     "redux": "^3.7.2",
