--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^16.2.0",
     "react-draggable": "^3.0.5",
     "react-inlinesvg": "^0.7.5",
+    "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-redux-loading-bar": "^3.1.2",
     "react-router-dom": "^4.3.1",
