--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "connected-react-router": "^4.3.0",
     "cross-fetch": "^1.1.1",
     "css-loader": "^0.28.10",
+    "file-loader": "^1.1.11",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "ngl": "2.0.0-dev.32",
