--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.20.2",
+    "url-loader": "^1.0.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
