--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "connected-react-router": "^4.3.0",
     "cross-fetch": "^1.1.1",
     "css-loader": "^0.28.10",
+    "file-loader": "^1.1.11",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "ngl": "2.0.0-dev.32",
@@ -45,6 +46,7 @@
     "react-dom": "^16.2.0",
     "react-draggable": "^3.0.5",
     "react-inlinesvg": "^0.7.5",
+    "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-redux-loading-bar": "^3.1.2",
     "react-router-dom": "^4.3.1",
@@ -56,6 +58,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.20.2",
+    "url-loader": "^1.0.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
