--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^0.28.10",
     "file-loader": "^1.1.11",
     "jquery": "^3.3.1",
+    "jszip": "^3.1.5",
     "lodash": "^4.17.5",
     "ngl": "2.0.0-dev.32",
     "nprogress": "^0.2.0",
