--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cross-fetch": "^1.1.1",
     "css-loader": "^0.28.10",
     "file-loader": "^1.1.11",
+    "file-saver": "^1.3.8",
     "jquery": "^3.3.1",
     "jszip": "^3.1.5",
     "lodash": "^4.17.5",
