--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "cross-fetch": "^1.1.1",
     "css-loader": "^0.28.10",
     "file-loader": "^1.1.11",
+    "file-saver": "^1.3.8",
     "jquery": "^3.3.1",
+    "jszip": "^3.1.5",
     "lodash": "^4.17.5",
     "ngl": "2.0.0-dev.32",
     "nprogress": "^0.2.0",
