--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "file-loader": "^1.1.11",
     "file-saver": "^1.3.8",
     "jquery": "^3.3.1",
-    "js-cookie": "^2.2.0",
     "jszip": "^3.1.5",
     "lodash": "^4.17.5",
     "ngl": "2.0.0-dev.32",
@@ -46,6 +45,7 @@
     "react-bootstrap-toggle": "^2.2.6",
     "react-burger-menu": "^2.3.0",
     "react-chartjs": "^1.2.0",
+    "react-cookie": "^2.2.0",
     "react-dom": "^16.2.0",
     "react-draggable": "^3.0.5",
     "react-inlinesvg": "^0.7.5",
