--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^0.28.10",
     "file-loader": "^1.1.11",
     "file-saver": "^1.3.8",
+    "immutability-helper": "^2.7.1",
     "jquery": "^3.3.1",
     "jszip": "^3.1.5",
     "lodash": "^4.17.5",
