--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "fixmyjs": "^2.0.0",
     "install": "^0.10.4",
     "jest": "^22.4.2",
+    "jsdom": "^11.11.0",
     "jshint": "^2.9.5",
     "webpack": "^4.12.0",
     "webpack-bundle-tracker": "^0.2.1",
