--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fragalysis-frontend",
-  "version": "0.0.1-alpha",
+  "version": "0.1.0",
   "description": "Frontend for fragalysis",
   "main": "webpack.config.js",
   "scripts": {
