--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "watch": "webpack --config webpack.config.js --watch",
     "dev": "webpack --config webpack.config.js --mode development --watch"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xchem/fragalysis-frontend.git"
