--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "redux-burger-menu": "^0.2.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "redux-undo": "^1.0.0-beta9-9-7",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
     "uuid": "^3.2.1"
