--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-  "presets": ["babel-preset-env", "react"],
-  "plugins": ["transform-decorators-legacy"]
+  "presets": ["babel-preset-env", "react"]
 }
