--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/xchem/fragalysis-frontend#readme",
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "clipboard": "1.7.1",
@@ -51,6 +52,7 @@
     "react-dom": "^16.2.0",
     "react-draggable": "^3.0.5",
     "react-inlinesvg": "^0.7.5",
+    "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-redux-loading-bar": "^3.1.2",
