--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "8"
 script:
-  - npm test
+  - npm run build && npm test
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     npm run-script build;
