--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
+    "react-bootstrap-toggle": "^2.3.1",
     "react-redux-loading-bar": "^3.1.2",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
