--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "connected-react-router": "^4.3.0",
     "cross-fetch": "^1.1.1",
     "css-loader": "^1.0.0",
+    "emotion": "^9.2.9",
     "file-loader": "^1.1.11",
     "file-saver": "^1.3.8",
     "jquery": "^3.3.1",
@@ -41,6 +42,7 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-chartjs": "^1.2.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-inlinesvg": "^0.7.5",
     "react-keydown": "^1.9.7",
@@ -49,6 +51,7 @@
     "react-bootstrap-toggle": "^2.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
+    "react-spinners": "^0.4.5",
     "react-svg-inline": "^2.1.0",
     "react-typeahead": "^2.0.0-alpha.8",
     "redux": "^3.7.2",
