--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "jquery": "^3.3.1",
     "jszip": "^3.1.5",
     "lodash": "^4.17.5",
+    "logrocket": "^0.6.17",
     "ngl": "2.0.0-dev.33",
     "nprogress": "^0.2.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.4",
+    "react-bootstrap-toggle": "^2.3.1",
     "react-chartjs": "^1.2.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
@@ -48,7 +50,6 @@
     "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
-    "react-bootstrap-toggle": "^2.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-spinners": "^0.4.5",
