--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/xchem/fragalysis-frontend#readme",
   "dependencies": {
+    "@sentry/browser": "^4.0.4",
     "axios": "^0.17.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
