--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
-    "clipboard": "1.7.1",
+    "clipboard": "^1.7.1",
     "connected-react-router": "^4.3.0",
     "cross-fetch": "^1.1.1",
     "css-loader": "^1.0.0",
@@ -45,7 +45,6 @@
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-toggle": "^2.3.1",
     "react-chartjs": "^1.2.0",
-    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-inlinesvg": "^0.7.5",
     "react-keydown": "^1.9.7",
