--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-toggle": "^2.3.1",
     "react-chartjs": "^1.2.0",
+    "react-clipboard.js": "^2.0.1",
     "react-dom": "^16.2.0",
     "react-inlinesvg": "^0.7.5",
     "react-keydown": "^1.9.7",
