--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-toggle": "^2.3.1",
     "react-chartjs": "^1.2.0",
+    "clipboard.js": "^2.0.1",
     "react-clipboard.js": "^2.0.1",
     "react-dom": "^16.2.0",
     "react-inlinesvg": "^0.7.5",
