--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "connected-react-router": "^4.3.0",
+    "copy-webpack-plugin": "^4.6.0",
     "cross-fetch": "^1.1.1",
     "css-loader": "^1.0.0",
     "emotion": "^9.2.9",
@@ -38,7 +39,7 @@
     "jszip": "^3.1.5",
     "lodash": "^4.17.5",
     "logrocket": "^0.6.17",
-    "ngl": "2.0.0-dev.33",
+    "ngl": "^0.10.4",
     "nprogress": "^0.2.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.4",
