--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "emotion": "^9.2.9",
     "file-loader": "^1.1.11",
     "file-saver": "^1.3.8",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "jszip": "^3.1.5",
     "lodash": "^4.17.5",
@@ -62,7 +63,8 @@
     "redux-undo": "^1.0.0-beta9-9-7",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "webapp-webpack-plugin": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
