--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "redux-undo": "^1.0.0-beta9-9-7",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
-    "uuid": "^3.2.1",
+    "uuid": "^3.2.1"
+
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
