--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
     "uuid": "^3.2.1"
+
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -76,6 +77,7 @@
     "jest": "^23.6.0",
     "jsdom": "^11.11.0",
     "jshint": "^2.9.5",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.20.0",
     "webpack-bundle-tracker": "^0.3.0",
     "webpack-cli": "^3.1.1"
