--- a/package.json
+++ b/package.json
@@ -81,5 +81,9 @@
     "webpack": "^4.20.0",
     "webpack-bundle-tracker": "^0.3.0",
     "webpack-cli": "^3.1.1"
+  },
+  "peerDependencies": {
+    "popper.js" : "^1.14.6",
+    "chart.js": "^1.1.1"
   }
 }
