--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack --config webpack.config.js --progress --colors --mode production",
-    "watch": "webpack --config webpack.config.js --watch",
-    "dev": "webpack --config webpack.config.js --mode development --watch"
+    "build": "node --max_old_space_size=8192 node_modules/.bin/webpack --config webpack.config.js --progress --colors --mode production",
+    "watch": "node --max_old_space_size=8192 node_modules/.bin/webpack --config webpack.config.js --watch",
+    "dev": "node --max_old_space_size=8192 node_modules/.bin/webpack --config webpack.config.js --mode development --watch"
   },
   "jest": {
     "testEnvironment": "node"
@@ -81,9 +81,5 @@
     "webpack": "^4.20.0",
     "webpack-bundle-tracker": "^0.3.0",
     "webpack-cli": "^3.1.1"
-  },
-  "peerDependencies": {
-    "popper.js" : "^1.14.6",
-    "chart.js": "^1.1.1"
   }
 }
