--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "jest": "^23.6.0",
     "jsdom": "^11.11.0",
     "jshint": "^2.9.5",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "4.26.0",
+    "uglifyjs-webpack-plugin": "2.0.1",
+    "webpack": "^4.20.0",
     "webpack-bundle-tracker": "^0.3.0",
     "webpack-cli": "^3.1.1"
   }
