--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js:
   - "8"
 script:
-  - npm install && npm test
+  - yarn install && yarn test
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    npm run-script build;
+    yarn run-script build;
     fi
