--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Frontend for fragalysis",
   "main": "webpack.config.js",
   "scripts": {
+    "start": "node server.js",
     "test": "jest",
     "build": "webpack --config webpack.config.js --progress --mode production",
     "watch": "webpack --config webpack.config.js --watch",
@@ -32,6 +33,7 @@
     "cross-fetch": "^1.1.1",
     "css-loader": "^1.0.0",
     "emotion": "^9.2.9",
+    "express": "^4.17.1",
     "file-loader": "^1.1.11",
     "file-saver": "^1.3.8",
     "jquery": "^3.3.1",
@@ -46,6 +48,7 @@
     "react-chartjs": "^1.2.0",
     "react-clipboard.js": "^2.0.1",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.12.12",
     "react-inlinesvg": "^0.7.5",
     "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
@@ -61,8 +64,10 @@
     "redux-undo": "^1.0.0-beta9-9-7",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
-    "uuid": "^3.2.1"
-
+    "uuid": "^3.2.1",
+    "webpack-dev-middleware": "^3.7.1",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
