--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   },
   "homepage": "https://github.com/xchem/fragalysis-frontend#readme",
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
     "@sentry/browser": "^4.0.4",
     "axios": "^0.17.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
+    "classnames": "^2.2.6",
     "connected-react-router": "^4.3.0",
     "cross-fetch": "^1.1.1",
     "css-loader": "^1.0.0",
