--- a/package.json
+++ b/package.json
@@ -75,7 +75,9 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "compression-webpack-plugin": "^1.1.11",
     "enzyme": "^3.6.0",
