--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/xchem/fragalysis-frontend#readme",
   "dependencies": {
     "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "@sentry/browser": "^4.0.4",
     "axios": "^0.17.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
