--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-typeahead": "^2.0.0-alpha.8",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.2.0",
     "redux-undo": "^1.0.0-beta9-9-7",
     "style-loader": "^0.20.2",
