--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "ngl": "2.0.0-dev.33",
     "nprogress": "^0.2.0",
     "ramda": "^0.26.1",
-    "react": "^16.2.0",
+    "react": "^16.10.2",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-toggle": "^2.3.1",
     "react-chartjs": "^1.2.0",
@@ -56,17 +56,18 @@
     "react-inlinesvg": "^0.7.5",
     "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
-    "react-redux": "^5.0.7",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-spinners": "^0.4.5",
     "react-svg-inline": "^2.1.0",
     "react-typeahead": "^2.0.0-alpha.8",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
+    "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "redux-undo": "^1.0.0-beta9-9-7",
+    "reselect": "^4.0.0",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
     "uuid": "^3.2.1",
