--- a/package.json
+++ b/package.json
@@ -76,7 +76,10 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
     "babel-core": "^6.26.0",
+    "babel-eslint": "10.x",
     "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -86,13 +89,47 @@
     "compression-webpack-plugin": "^1.1.11",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "eslint": "6.x",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-flowtype": "3.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "1.x",
+    "husky": "^3.0.8",
     "install": "^0.10.4",
     "jest": "^23.6.0",
     "jsdom": "^11.11.0",
     "jshint": "^2.9.5",
+    "lint-staged": "^9.4.2",
+    "prettier": "^1.18.2",
     "terser-webpack-plugin": "^1.2.0",
     "webpack": "^4.39.3",
     "webpack-bundle-tracker": "^0.3.0",
     "webpack-cli": "^3.1.1"
+  },
+  "eslintIgnore": [
+    "node_modules"
+  ],
+  "prettier": {
+    "singleQuote": true,
+    "printWidth": 120,
+    "tabWidth": 2,
+    "endOfLine": "lf",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "js/**/*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
