--- a/package.json
+++ b/package.json
@@ -57,14 +57,13 @@
     "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
     "react-redux": "^7.1.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-spinners": "^0.4.5",
     "react-svg-inline": "^2.1.0",
     "react-typeahead": "^2.0.0-alpha.8",
-    "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-starter-kit": "^0.7.0",
     "redux-thunk": "^2.3.0",
     "redux-undo": "^1.0.0-beta9-9-7",
     "reselect": "^4.0.0",
