refactoring target list component, change of loading protein only in main preview, create generic functions instead of inheritance of GenericList component

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-chartjs": "^1.2.0",
     "react-clipboard.js": "^2.0.1",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.12.12",
+    "react-hot-loader": "^4.12.15",
+    "@hot-loader/react-dom": "^16.10.2",
     "react-inlinesvg": "^0.7.5",
     "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
