--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/xchem/fragalysis-frontend#readme",
   "dependencies": {
+    "@hot-loader/react-dom": "^16.10.2",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@sentry/browser": "^4.0.4",
@@ -53,7 +54,6 @@
     "react-clipboard.js": "^2.0.1",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.12.15",
-    "@hot-loader/react-dom": "^16.10.2",
     "react-inlinesvg": "^0.7.5",
     "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
@@ -63,6 +63,7 @@
     "react-spinners": "^0.4.5",
     "react-svg-inline": "^2.1.0",
     "react-typeahead": "^2.0.0-alpha.8",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-starter-kit": "^0.7.0",
     "redux-thunk": "^2.3.0",
