--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-chartjs": "^1.2.0",
     "react-clipboard.js": "^2.0.1",
     "react-dom": "^16.2.0",
+    "react-infinite-scroll-component": "^4.5.3",
     "react-hot-loader": "^4.12.15",
     "react-inlinesvg": "^0.7.5",
     "react-keydown": "^1.9.7",
