--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["babel-preset-env", "react"],
+  "presets": ["babel-preset-env", "react", "stage-3"],
   "plugins": ["transform-decorators-legacy", "emotion"]
 }
