--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "react-chartjs": "^1.2.0",
     "react-clipboard.js": "^2.0.1",
     "react-dom": "^16.2.0",
-    "react-infinite-scroll-component": "^4.5.3",
     "react-hot-loader": "^4.12.15",
+    "react-infinite-scroll-component": "^4.5.3",
     "react-inlinesvg": "^0.7.5",
     "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
@@ -88,6 +88,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "compression-webpack-plugin": "^1.1.11",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
