--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ngl": "2.0.0-dev.36",
     "nprogress": "^0.2.0",
     "ramda": "^0.26.1",
-    "react": "^16.10.2",
+    "react": "^16.11.0",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-toggle": "^2.3.1",
     "react-chartjs": "^1.2.0",
@@ -81,7 +81,7 @@
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "babel-core": "^6.26.0",
-    "babel-eslint": "10.x",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -92,7 +92,7 @@
     "compression-webpack-plugin": "^1.1.11",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "eslint": "6.x",
+    "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-plugin-flowtype": "3.x",
