update package.json dependencies

--- a/package.json
+++ b/package.json
@@ -31,30 +31,22 @@
     "axios": "^0.17.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.0.0",
     "classnames": "^2.2.6",
-    "connected-react-router": "^4.3.0",
-    "cross-fetch": "^1.1.1",
-    "css-loader": "^1.0.0",
-    "emotion": "^9.2.9",
+    "cross-fetch": "^3.0.4",
+    "css-loader": "^3.2.0",
+    "emotion": "^10.0.23",
     "express": "^4.17.1",
-    "file-loader": "^1.1.11",
-    "file-saver": "^1.3.8",
-    "jquery": "^3.3.1",
-    "jszip": "^3.1.5",
-    "lodash": "^4.17.5",
-    "logrocket": "^0.6.17",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.2.2",
+    "logrocket": "^1.0.3",
     "ngl": "2.0.0-dev.36",
-    "nprogress": "^0.2.0",
     "ramda": "^0.26.1",
     "react": "^16.11.0",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-toggle": "^2.3.1",
-    "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.12.15",
     "react-infinite-scroller": "^1.2.4",
-    "react-inlinesvg": "^0.7.5",
     "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
     "react-redux": "^7.1.1",
@@ -72,12 +64,12 @@
     "url-loader": "^1.0.1",
     "uuid": "^3.2.1",
     "webpack-dev-middleware": "^3.7.1",
-    "webpack-dev-server": "^3.8.0",
     "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "2.x",
-    "@typescript-eslint/parser": "2.x",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
+    "typescript": "^3.7.2",
     "babel-core": "^6.26.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^22.4.1",
