update package.json dependencies exclude react-bootstrap and babel

--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
   },
   "homepage": "https://github.com/xchem/fragalysis-frontend#readme",
   "dependencies": {
-    "@hot-loader/react-dom": "^16.10.2",
+    "@hot-loader/react-dom": "^16.11.0",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
-    "@sentry/browser": "^4.0.4",
-    "axios": "^0.17.1",
+    "@sentry/browser": "^5.7.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
@@ -45,7 +44,7 @@
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-toggle": "^2.3.1",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.12.15",
+    "react-hot-loader": "^4.12.16",
     "react-infinite-scroller": "^1.2.4",
     "react-keydown": "^1.9.7",
     "react-modal": "^3.4.5",
@@ -56,12 +55,12 @@
     "react-typeahead": "^2.0.0-alpha.8",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-starter-kit": "^0.7.0",
+    "redux-starter-kit": "^1.0.1",
     "redux-thunk": "^2.3.0",
     "redux-undo": "^1.0.0-beta9-9-7",
     "reselect": "^4.0.0",
-    "style-loader": "^0.20.2",
-    "url-loader": "^1.0.1",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
     "uuid": "^3.2.1",
     "webpack-dev-middleware": "^3.7.1",
     "webpack-hot-middleware": "^2.25.0"
@@ -72,35 +71,33 @@
     "typescript": "^3.7.2",
     "babel-core": "^6.26.0",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^22.4.1",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "compression-webpack-plugin": "^1.1.11",
+    "compression-webpack-plugin": "^3.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-config-react-app": "^5.0.2",
-    "eslint-plugin-flowtype": "3.x",
+    "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "1.x",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
     "husky": "^3.0.8",
-    "install": "^0.10.4",
-    "jest": "^23.6.0",
-    "jsdom": "^11.11.0",
+    "jest": "^24.9.0",
     "jshint": "^2.9.5",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
-    "terser-webpack-plugin": "^1.2.0",
+    "terser-webpack-plugin": "^2.2.1",
     "webpack": "^4.39.3",
-    "webpack-bundle-tracker": "^0.3.0",
+    "webpack-bundle-tracker": "^0.4.3",
     "webpack-cli": "^3.1.1"
   },
   "eslintIgnore": [
