--- a/package.json
+++ b/package.json
@@ -41,24 +41,19 @@
     "ngl": "2.0.0-dev.36",
     "ramda": "^0.26.1",
     "react": "^16.11.0",
-    "react-bootstrap": "^0.32.4",
+    "react-bootstrap": "^0.33.0",
     "react-bootstrap-toggle": "^2.3.1",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.12.16",
     "react-infinite-scroller": "^1.2.4",
-    "react-keydown": "^1.9.7",
-    "react-modal": "^3.4.5",
-    "react-redux": "^7.1.1",
+    "react-modal": "^3.11.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-router-redux": "^4.0.8",
     "react-svg-inline": "^2.1.0",
-    "react-typeahead": "^2.0.0-alpha.8",
-    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-starter-kit": "^1.0.1",
     "redux-thunk": "^2.3.0",
-    "redux-undo": "^1.0.0-beta9-9-7",
-    "reselect": "^4.0.0",
+    "redux-undo": "^0.6.1",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
     "uuid": "^3.2.1",
@@ -79,8 +74,8 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "compression-webpack-plugin": "^3.0.0",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-config-react-app": "^5.0.2",
@@ -90,15 +85,13 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
-    "husky": "^3.0.8",
+    "husky": "^3.0.9",
     "jest": "^24.9.0",
-    "jshint": "^2.9.5",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "terser-webpack-plugin": "^2.2.1",
     "webpack": "^4.39.3",
-    "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^3.1.1"
+    "webpack-bundle-tracker": "^0.4.3"
   },
   "eslintIgnore": [
     "node_modules"
