--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@sentry/browser": "^5.7.1",
+    "axios": "^0.19.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
@@ -63,7 +64,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
-    "typescript": "^3.7.2",
     "babel-core": "^6.26.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
@@ -90,6 +90,7 @@
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "terser-webpack-plugin": "^2.2.1",
+    "typescript": "^3.7.2",
     "webpack": "^4.39.3",
     "webpack-bundle-tracker": "^0.4.3"
   },
