remove Ramda package and fetchWithMemoize function

--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "express": "^4.17.1",
     "file-saver": "^2.0.2",
     "jszip": "^3.2.2",
+    "lodash": "^4.17.15",
     "logrocket": "^1.0.3",
     "ngl": "2.0.0-dev.36",
-    "ramda": "^0.26.1",
     "react": "^16.11.0",
     "react-bootstrap": "^0.33.0",
     "react-bootstrap-toggle": "^2.3.1",
