--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-svg-inline": "^2.1.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-starter-kit": "^1.0.1",
     "redux-thunk": "^2.3.0",
     "redux-undo": "^0.6.1",
     "style-loader": "^1.0.0",
@@ -78,12 +79,12 @@
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-config-react-app": "^5.0.2",
-    "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "eslint-plugin-react-hooks": "^1.7.0-alpha.0",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.2.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "lint-staged": "^9.4.2",
