--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "terser-webpack-plugin": "^2.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.39.3",
-    "webpack-bundle-tracker": "^0.4.3"
+    "webpack-bundle-tracker": "^0.4.3",
+    "webpack-cli": "^3.3.10"
   },
   "eslintIgnore": [
     "node_modules"
