--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
+    "clsx": "^1.0.4",
     "cross-fetch": "^3.0.4",
     "css-loader": "^3.2.0",
     "emotion": "^10.0.23",
@@ -54,6 +55,7 @@
     "redux-thunk": "^2.3.0",
     "redux-undo": "^0.6.1",
     "style-loader": "^1.0.0",
+    "typeface-roboto": "^0.0.75",
     "url-loader": "^2.2.0",
     "uuid": "^3.2.1",
     "webpack-dev-middleware": "^3.7.1",
