--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@hot-loader/react-dom": "^16.11.0",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
+    "@material-ui/lab": "^4.0.0-alpha.35",
     "@sentry/browser": "^5.7.1",
     "axios": "^0.19.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
