--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "compression-webpack-plugin": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "error-overlay-webpack-plugin": "^0.4.1",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-config-react-app": "^5.0.2",
