--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,4 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-  ],
-  "plugins": [
-    [
-      "@babel/plugin-proposal-decorators",
-      {
-        "legacy": true
-      }
-    ],
-    "react-hot-loader/babel",
-    "@babel/plugin-syntax-dynamic-import",
-    "@babel/plugin-syntax-import-meta",
-    "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-json-strings"
-  ]
+  "presets": ["babel-preset-env", "react", "stage-3", "es2015"],
+  "plugins": ["transform-decorators-legacy", "emotion", "react-hot-loader/babel"]
 }
