add projects wireframes

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jszip": "^3.2.2",
     "lodash": "^4.17.15",
     "logrocket": "^1.0.3",
+    "moment": "^2.24.0",
     "ngl": "2.0.0-dev.37",
     "react": "^16.11.0",
     "react-color": "^2.17.3",
