#3 added functionality for getting picture of screen, uploading it to github repo and attaching it to created issue + updated layout of modal form

--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "@babel/polyfill": "^7.0.0",
     "@date-io/date-fns": "1.x",
     "@gitgraph/react": "^1.5.2",
+    "@date-io/date-fns": "1.x",
     "@hot-loader/react-dom": "^16.11.0",
-    "@material-ui/core": "^4.8.3",
+    "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
     "@sentry/browser": "^5.7.1",
