- Initial travis triggering logic

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,82 @@
+---
+
+# -----------------
+# Control variables (Travis Settings)
+# -----------------
+#
+# To trigger the dependent, downstream builds (like the Stack and Loader)...
+#
+# TRIGGER_DOWNSTREAM    Should be set to 'yes'
+#                       Enabling TRIGGER_DOWNSTREAM is only effective
+#                       if PUBLISH_IMAGES is also set.
+#
+# The following required if TRIGGER_DOWNSTREAM...
+#
+# TRAVIS_ACCESS_TOKEN   A Travis token
+#
+# FE_NAMESPACE          To define the namespace of the frontend (as used by teh Stack) (default is 'xchem')
+# FE_BRANCH             To define the branch of the frontend (as used by teh Stack) (default is 'master')
+# BE_NAMESPACE          To define the namespace of the backend (default is 'xchem')
+# STACK_NAMESPACE       To define the namespace of the Stack repository (default is 'xchem')
+# STACK_BRANCH          The branch to trigger (default is 'master')
+
 language: node_js
 node_js:
   - "8"
-script:
-  - yarn install && yarn test --passWithNoTests
-after_success:
-  - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    yarn run build;
-    fi
+
+stages:
+- name: test
+  if: branch = im-travis
+- name: trigger downstream
+  if: |
+    branch = im-travis \
+    AND env(TRIGGER_DOWNSTREAM) = yes
+
+# Global variables
+# (available to the Job matrix)...
+env:
+  global:
+  # The origin of the trigger code
+  - TRIGGER_ORIGIN=https://raw.githubusercontent.com/informaticsmatters/trigger-travis/master
+
+install:
+# Download trigger code
+- curl --location --retry 3 ${TRIGGER_ORIGIN}/requirements.txt --output trigger-travis-requirements.txt
+- curl --location --retry 3 ${TRIGGER_ORIGIN}/trigger-travis.py --output trigger-travis.py
+- pip install -r trigger-travis-requirements.txt
+- chmod +x trigger-travis.py
+
+before_script:
+# Downstream project triggers.
+# The downstream projects are the Fragalysis Stack.
+# The user can define the following variables in their Travis Settings.
+# If they're not defined then apply sensible defaults.
+- export FE_NAMESPACE=${FE_NAMESPACE-xchem}
+- export FE_BRANCH=${FE_NAMESPACE-master}
+- export BE_NAMESPACE=${BE_NAMESPACE-xchem}
+- export STACK_NAMESPACE=${STACK_NAMESPACE:-xchem}
+- export STACK_BRANCH=${STACK_BRANCH:-master}
+- export STACK_VARS=FE_IMAGE_TAG=latest,FE_NAMESPACE=${FE_NAMESPACE},BE_NAMESPACE=${BE_NAMESPACE}
+
+jobs:
+  include:
+
+  # Test-stage jobs...
+
+  - stage: test
+    name: Test and Build
+    script:
+    - yarn install && yarn test --passWithNoTests
+    - if [ "$TRAVIS_BRANCH" == "master" ]; then
+      yarn run build;
+      fi
+
+  # Downstream trigger
+
+  - stage: trigger downstream
+    name: Trigger Downstream
+    script:
+    - echo "STACK_NAMESPACE=${STACK_NAMESPACE}"
+    - echo "STACK_BRANCH=${STACK_BRANCH}"
+    - echo "STACK_VARS=${STACK_VARS}"
+    - ./trigger-travis.py --pro ${STACK_NAMESPACE} fragalysis-stack ${TRAVIS_ACCESS_TOKEN} --branch ${STACK_BRANCH} --vars ${STACK_VARS}
