#120 added scribble possibility for report forms (added react-canvas-draw), try to get only valid email and from username in form, added resizable option for modal #163 changed "Title" to "Subject"

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fragalysis-frontend",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "Frontend for fragalysis",
   "main": "webpack.config.js",
   "scripts": {
@@ -55,6 +55,7 @@
     "logrocket": "^1.0.3",
     "ngl": "2.0.0-dev.37",
     "react": "^16.11.0",
+    "react-canvas-draw": "^1.1.0",
     "react-color": "^2.17.3",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
