#274 support optional chaining, show name of dataset in compounds of cross reference dialog

--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,8 @@
       "@babel/plugin-proposal-decorators",
       {
         "legacy": true
-      }
+      },
+      "@babel/plugin-proposal-optional-chaining"
     ],
     "react-hot-loader/babel",
     "@babel/plugin-syntax-dynamic-import",
