Update to use Postgres in dev env

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,17 +1,16 @@
 version: '3'
 
 services:
-  mysql:
-    image: mysql:5.7.23
+  database:
+    image: postgres:12.2
     volumes:
-       - ../data/mysql_data:/var/lib/mysql
+    - ../django_data:/var/lib/postgresql/data
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: django_db
-      MYSQL_PASSWORD: django_password
-      MYSQL_USER: django
+      POSTGRES_PASSWORD: fragalysis
+      POSTGRES_DB: frag
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
-      - "3306:3306"
+    - "5432:5432"
   graph:
     container_name: neo4j
     image: neo4j:3.5
@@ -40,7 +39,7 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - mysql
+      - database
       - graph
   loader:
     container_name: loader
@@ -55,4 +54,4 @@ services:
       MYSQL_USER: django
       DATA_ORIGIN: EXAMPLE
     depends_on:
-      - mysql
+      - database
