--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -48,10 +48,11 @@ services:
       - ../data/input:/fragalysis
       - ../data/media:/code/media
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: django_db
-      MYSQL_PASSWORD: django_password
-      MYSQL_USER: django
+      POSTGRESQL_DATABASE: frag
+      POSTGRESQL_USER: postgres
+      POSTGRESQL_PASSWORD: fragalysis
+      POSTGRESQL_HOST: database
+      POSTGRESQL_PORT: 5432
       DATA_ORIGIN: EXAMPLE
     depends_on:
       - database
