--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,9 +4,10 @@ services:
   database:
     image: postgres:12.2
     volumes:
-    - ../django_data:/var/lib/postgresql/data
+      - ../data/postgre/data:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: fragalysis
+      POSTGRES_USER: fragalysis
       POSTGRES_DB: frag
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
@@ -38,6 +39,12 @@ services:
       - ../fragalysis-frontend:/code/frontend
     ports:
       - "8080:80"
+    environment:
+      POSTGRESQL_DATABASE: frag
+      POSTGRESQL_USER: fragalysis
+      POSTGRESQL_PASSWORD: fragalysis
+      POSTGRESQL_HOST: database
+      POSTGRESQL_PORT: 5432
     depends_on:
       - database
       - graph
@@ -49,7 +56,7 @@ services:
       - ../data/media:/code/media
     environment:
       POSTGRESQL_DATABASE: frag
-      POSTGRESQL_USER: postgres
+      POSTGRESQL_USER: fragalysis
       POSTGRESQL_PASSWORD: fragalysis
       POSTGRESQL_HOST: database
       POSTGRESQL_PORT: 5432
